<resources>
    <string name="app_name">Fame</string>
    <string name="continue_login">Continue</string>
    <string name="sign_in">Login</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_contact_us">Contact us</string>
    <string name="action_about_us">About us</string>
    <string name="action_terms">Terms and Conditions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dashboard">DashBoard</string>
    <string name="orders">My Orders</string>
    <string name="address">My Addresses</string>
    <string name="account_details">Account Details</string>
    <string name="pre_order">Pre-Order</string>
    <string name="logout">Logout</string>
    <string name="market_place">Market Place</string>
    <string name="buy_now">BUY NOW</string>
    <string name="book_now">BOOK NOW</string>
    <string name="addCart">ADD TO CART</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="removeCart">Remove</string>
    <string name="addAddress">+ Add a new address</string>

    <string name="hint_city">City*</string>
    <string name="hint_locality">Locality, area or street*</string>
    <string name="hint_flat_no">Flat no., Building name*</string>
    <string name="pincode">Pincode*</string>
    <string name="state">State*</string>
    <string name="landMark">Landmark (Optional)</string>
    <string name="name">Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="alternate_num">Alternate Phone number (Optional)</string>
    <string name="save">SAVE</string>
    <string name="resend"><u>Did not receive OTP?</u> <b>Resend</b></string>
    <string name="fav">My Favourite</string>
    <string name="title_activity_choose_sim">Choose a SIM </string>
</resources>
