<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.purpledot.fame.fragments.dashboardFragments.AddressListFragment">


    <TextView
        android:id="@+id/tv_address_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_ten_dp"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_addresses_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fivedp" />


    <ScrollView
        android:id="@+id/root_scv_addNewAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/app_ten_dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_address_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_city"
                    android:inputType="text|textCapSentences" />

                <TextView
                    android:id="@+id/tv_city_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Field is required"
                    android:textColor="@color/red"
                    android:visibility="gone" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_address_locality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_locality"
                    android:inputType="text|textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_locality_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Field is required"
                android:textColor="@color/red"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_address_flat_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_ten_dp"
                    android:hint="@string/hint_flat_no" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_flat_no_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Field is required"
                android:textColor="@color/red"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_ten_dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <EditText
                        android:id="@+id/edt_address_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pincode"
                        android:inputType="number"
                        android:maxLength="6" />

                    <TextView
                        android:id="@+id/tv_pincode_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Field is required"
                        android:textColor="@color/red"
                        android:visibility="gone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <EditText
                        android:id="@+id/edt_address_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:inputType="textCapSentences" />

                    <TextView
                        android:id="@+id/tv_state_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Field is required"
                        android:textColor="@color/red"
                        android:visibility="gone" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_address_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_ten_dp"
                    android:hint="@string/landMark"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_address_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_ten_dp"
                    android:hint="@string/name"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_name_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Field is required"
                android:textColor="@color/red"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_address_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_ten_dp"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_mobile_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Field is required"
                android:textColor="@color/red"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_address_alt_phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_ten_dp"
                    android:hint="@string/alternate_num"
                    android:inputType="number"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
