<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.purpledot.fame.activites.productModule.ProductDetailsActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:expandedTitleMarginStart="60dp">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="220dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/imageViewplaces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/p4"
                    tools:ignore="ContentDescription" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/app_ten_dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_pd_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_pd_ProductName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="15dp"
                        android:text="Chudidar Dress"
                        android:textColor="@color/app_black_buttons_bg_color"
                        android:textSize="@dimen/app_eighteen_sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txt_pd_StoreSoldByTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="15dp"
                            android:text="Seller :"
                            android:textColor="@color/app_black_buttons_bg_color" />

                        <TextView
                            android:id="@+id/txt_pd_StoreSellerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="15dp"
                            android:layout_toRightOf="@id/txt_pd_StoreSoldByTitle"
                            android:text="Venky"
                            android:textColor="@color/app_black_buttons_bg_color" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtStorePostedTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="5dp"
                            android:text="Posted on : "
                            android:textColor="@color/app_black_buttons_bg_color" />

                        <TextView
                            android:id="@+id/txtStorePosted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_toRightOf="@id/txtStorePostedTitle"
                            android:text=" march 2017"
                            android:textColor="@color/app_black_buttons_bg_color" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txt_pd_StoreEPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:text="599.00 rs"
                        android:textColor="@color/app_black_buttons_bg_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/btnAddCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/fivedp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:background="@color/red"
                        android:paddingLeft="@dimen/app_ten_dp"
                        android:paddingRight="@dimen/app_ten_dp"
                        android:text="@string/addCart"
                        android:textColor="@color/app_white_buttons_bg_color" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="@dimen/fivedp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:background="@color/red"
                        android:text="@string/book_now"
                        android:textColor="@color/app_white_buttons_bg_color" />

                    <Button
                        android:id="@+id/btnStoreBuyIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:background="@color/red"
                        android:text="@string/buy_now"
                        android:textColor="@color/app_white_buttons_bg_color" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
